--- a/style.css
+++ b/style.css
@@ -1,25 +1,21 @@
 /* style all html elements */
 
-/* *{ 
- 
- }  */
-
 .quiz{
-    border-style: solid black;
+    border-color: black;
     width: 900px;
     height: 600px;
     align-content: center;
     text-align: center;
     margin: 0 Auto;
-    background-color: honeydew;;
+    /* background-color: honeydew;; */
     /* rgb(156, 226, 226); */
     justify-items: center;
     padding: 10px 50px 50px 50px;
 }
 .css{
-    border-style: solid black;
-    width: 900px;
-    height: 600px;
+    border-color: black;
+    width: 100%;
+    height: 100%;
     align-content: center;
     text-align: center;
     margin: 0 Auto;
@@ -29,7 +25,7 @@
     padding: 10px 50px 50px 50px;
 }
 .start_quiz{
-    border-style: solid black;
+    border-color: black;
    align-items: center;
    justify-items: center;
    display: block;
@@ -38,7 +34,7 @@
    font-size: 18px;
 }
 .submit{
-    border-style: solid black;
+    border-color: black;
    align-items: center;
    justify-items: center;
    display: block;
@@ -47,7 +43,6 @@
    box-sizing: border-box;
    width: 100px;
    height: 30px;
-   text-size-adjust: 24px bold;
    font-size: 14px;
 }
 .html_quiz{
