--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@ body {
 	padding: 1rem;
 	min-height: 100vh;
 	font-family: sans-serif;
+	/* background-color: rgb(217, 245, 243); */
+	background-color:  steelblue;
+	width: 100%;
 }
 main {
 	display: grid;
@@ -15,14 +18,17 @@ main {
 	height: 60vh;
 	align-items: center;
 	text-align: center;
+	font-size: 20px;
+	/* background-color: rgba(41, 133, 224, 0.158); */
 }
 
 header {
-	background-color: lightgrey;
+	background-color: rgb(222, 235, 234);
+	background-color: lightseagreen;
 	margin: -1rem -1rem 1rem;
 	display: grid;
-	align-items: center;
-	text-align: center;
+	align-items: left;
+	text-align: left;
 	padding: 1rem;
 }
 
@@ -31,13 +37,18 @@ button {
 	font-size: 100%;
 	border: 0;
 	border-radius: 0.25rem;
-	background-color: lightseagreen;
+	background-color: rgb(167, 141, 141);
 	color: white;
 	justify-self: center;
+	display: grid;
+	justify-content: left;
+	align-content: left;
+
+
 }
 
 #time {
-	color: lightseagreen;
+	color: lightcoral;
 	font-size: 2rem;
 	font-weight: bold;
 }
@@ -46,4 +57,49 @@ label:hover {
 	color: lightseagreen;
 	cursor: pointer;
 	padding: 1rem 0;
+	font-size: 24px;
+}
+h2 {
+    display: grid;
+    font-size: 1.5em;
+    margin-block-start: 0.83em;
+    margin-block-end: 0.83em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+	font-weight: bold;
+	/* background-color: mediumaquamarine; */
+	font-family: Arial, Helvetica, sans-serif;
+	font-weight: bold;
+	font-size: 24px;
+	justify-content: left;
+	align-content: left;
+}
+p{
+	display: grid;
+	font-size: 20px;
+	justify-content: center;
+	align-content: center;
+}
+a{
+	display: grid;
+	font-size: 20px;
+	justify-content: center;
+	align-content: center;
+}
+label{
+	/* color:white; */
+	display: block;
+	font-size: 24px;
+	font-style: italic;
+	border-radius: 25px;
+  border: 2px solid #73AD21;
+  padding: 20px;
+  width: 200px;
+  height: 150px;
+  justify-content: center;
+  align-content: center;
+  width: 50%;
+  height:50%;
+  align-self: center;
+  
 }
