--- a/style.css
+++ b/style.css
@@ -30,6 +30,8 @@ header {
 	align-items: left;
 	text-align: left;
 	padding: 1rem;
+	animation-name: example;
+  animation-duration: 10s;
 }
 
 button {
@@ -59,7 +61,7 @@ label:hover {
 	padding: 1rem 0;
 	font-size: 24px;
 }
-h2 {
+h4 {
     display: grid;
     font-size: 1.5em;
     margin-block-start: 0.83em;
@@ -73,6 +75,8 @@ h2 {
 	font-size: 24px;
 	justify-content: left;
 	align-content: left;
+	animation-name: example;
+  animation-duration: 4s;
 }
 p{
 	display: grid;
@@ -101,5 +105,47 @@ label{
   width: 50%;
   height:50%;
   align-self: center;
+   animation-name: example;
+  animation-duration: 4s;
   
+}
+
+
+@keyframes example {
+  from {background-color: seagreen;}
+  to {background-color: gainsboro;}
+}
+h1{
+    display: grid;
+    font-size: 1.5em;
+    margin-block-start: 0.83em;
+    margin-block-end: 0.83em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+	font-weight: bold;
+	/* background-color: mediumaquamarine; */
+	font-family: Arial, Helvetica, sans-serif;
+	font-weight: bold;
+	font-size: 24px;
+	justify-content: center;
+	align-content: center;
+	animation-name: example;
+  animation-duration: 4s;
+}
+h2{
+    display: grid;
+    font-size: 1.5em;
+    margin-block-start: 0.83em;
+    margin-block-end: 0.83em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+	font-weight: bold;
+	/* background-color: mediumaquamarine; */
+	font-family: Arial, Helvetica, sans-serif;
+	font-weight: bold;
+	font-size: 24px;
+	justify-content: center;
+	align-content: center;
+	animation-name: example;
+  animation-duration: 4s;
 }
