--- a/.vscode/app.css
+++ b/.vscode/app.css
@@ -1,68 +1,3 @@
-* {
-	box-sizing: border-box;
-	font-family: Gotham Rounded;
-}
-
-body {
-	display: grid;
-	margin: 0;
-	padding: 1rem;
-	min-height: 100vh;
-	font-family: sans-serif;
-	background-color: #e3e3e3;
-	width: 100%;
-}
-p{
-	display: grid;
-	font-size: 22px;
-	justify-content: center;
-	align-content: center;
-}
-a{
-	display: grid;
-	font-size: 24px;
-	justify-content: center;
-	align-content: center;
-
-}
- 
-h1, h2{
-    display: grid;
-    font-size: 1.5em;
-    margin-block-start: 0.83em;
-    margin-block-end: 0.83em; 
-	font-weight: bold;
-	font-family: Arial, Helvetica, sans-serif;
-	font-weight: bold;
-	font-size: 28px;
-	justify-content: center;
-	align-content: center;
-}
-h1{
-	background-color: rgb(197, 195, 192);
-}
-@media only screen 
-  and (min-device-width: 320px) 
-  and (max-device-width: 480px)
-  and (-webkit-min-device-pixel-ratio: 2) {
-
-}
-@media only screen 
-  and (min-device-width: 768px) 
-  and (max-device-width: 1024px) 
-  and (-webkit-min-device-pixel-ratio: 1) {
-
-}
-@media screen 
-  and (min-device-width: 1200px) 
-  and (max-device-width: 1600px) 
-  and (-webkit-min-device-pixel-ratio: 1) { 
-}
-@media 
-  (min-device-width: 800px) 
-  and (max-device-width: 1280px) {
-
-}
 body {
 	display: grid;
 	margin: 0;
@@ -145,7 +80,7 @@ label{
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 10px 24px;
+  padding: 20px
 }
 span{
     color: black;
