--- a/app.css
+++ b/app.css
@@ -115,6 +115,11 @@ a{
 justify-content: right;
 float:right;
 }
+span{
+	font-family: sans-serif;
+	font-size: 24px;
+	color: rgb(32, 23, 23);
+}
 @media only screen 
   and (min-device-width: 375px) 
   and (max-device-width: 667px) 
