--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ body {
 	background-color:whitesmoke;
 	width: 100%;
 }
-main {
+label {
 	display: grid;
 	grid-template-rows: repeat(6, 1fr);
 	height: 100vh;
