--- a/app.css
+++ b/app.css
@@ -4,10 +4,10 @@ body {
 	padding: 1rem;
 	min-height: 100vh;
 	font-family: sans-serif;
-	background-color:whitesmoke;
+	background-color:rgb(233, 222, 222);
 	width: 100%;
 }
-main {
+/* main {
 	display: grid;
 	grid-template-rows: repeat(6, 1fr);
 	height: 60vh;
@@ -15,16 +15,21 @@ main {
 	text-align: center;
     font-size: 20px;
     
-}
+} */
 
 header {
-	background-color: rgb(219, 217, 219);
+	/* background-color: rgb(219, 217, 219); */
+		/* background-color: rgba(0, 0, 0, 0.4); */
+		/* background-color: rgba(0, 0, 0, 0.4); */
+	/* background-color: #db5461; */
 	margin: -1rem -1rem 1rem;
 	display: grid;
 	text-align: left;
 	padding: 1rem;
 	font-style: normal;
-	color: rgb(58, 54, 47);
+	color: rgb(66, 64, 59);
+	/* background-color: rgb(182, 206, 206); */
+		background-color: rgb(122, 187, 187);
 	
 }
 
@@ -33,11 +38,15 @@ button {
 	font-size: 100%;
 	border: 0;
 	border-radius: 0.25rem;
-	background-color: lightseagreen;
+	/* background-color: lightseagreen;  */
+	background-color: rgb(230, 164, 123);
 	color: white;
 	justify-self: center;
 	display: grid;
 	justify-content: left;
+	font-size: 24px;
+	width: 200px;  
+	
 }
 #time {
 	color: lightcoral;
@@ -61,16 +70,16 @@ h4 {
 	font-weight: bold;
 	font-family: Arial, Helvetica, sans-serif;
 	font-weight: bold;
-	font-size: 24px;
+	font-size: 30px;
 	justify-content: left;
+	justify-content: center;
 }
 label{
     display: flex;
-	font-size: 20px;
+	font-size: 30px;
 	font-style: normal;
-	font-family: 'Courier New', Courier, monospace;
-	border-radius: 25px;
-    border: 2px solid rgb(127, 146, 99);
+	font-family: 'Cabin', sans-serif; 
+    border: 2px solid rgb(194, 137, 122);
     padding: 20px;
     width: 200px;
     height: 150px;
@@ -79,7 +88,9 @@ label{
     width: 50%;
     height:80%;
     align-self: center;
-   background-color: silver;
+   /* background-color: rgb(212, 123, 87); */
+background-color: rgb(214, 136, 136);;
+   justify-self: center;
 }
 
 #next {
@@ -87,11 +98,18 @@ label{
   justify-content: center;
   align-items: center;
   padding: 0px;
+;
 }
 span{
     color: black;
-    font-size: 24px;
-    display: flex;
+    font-size: 50px;
+	display: flex;
+	color: rgb(228, 191, 191);
+}
+#option1, #option2, #option3, #option4 {
+	color:white;
+	font-size: 30px;
+	font-family:  Arial, Helvetica, sans-serif;
 }
 #result{
 width: 100px;
@@ -104,7 +122,7 @@ color: rgb(12, 12, 11);
 background-color: rgb(190, 209, 207);
 height: 40px;
 color: blue;
-border: 2px solid rgb(148, 134, 134);
+/* border: 2px solid rgb(148, 134, 134); */
 position: absolute;
 top: 130px;
 right: 60px;
@@ -120,15 +138,36 @@ span{
 	font-size: 24px;
 	color: rgb(32, 23, 23);
 }
-@media only screen 
-  and (min-device-width: 375px) 
-  and (max-device-width: 667px) 
-  and (-webkit-min-device-pixel-ratio: 2) { 
+footer{
+	/* background-color: rgb(99, 184, 184); */
+	background-color: rgb(122, 187, 187);
 
 }
-@media only screen 
-  and (min-device-width: 414px) 
-  and (max-device-width: 736px) 
-  and (-webkit-min-device-pixel-ratio: 3) { 
+@media only screen and (max-width: 768px) {
+	#question-display {
+		width: 100%;
+		padding: 10px;
+		margin: 150px auto;
+	}
+	header {
+		height: 350px;
+		width: 650px;
+	}
+}
 
+@media only screen and (max-width: 375px) {
+	#question{
+		width: 350px;
+		height: 550px;
+		padding: 10px;
+		margin: 150px auto;
+	}
+	header{
+		height: 350px;
+		width: 350px;
+		padding: 10px;
+		margin: 150px auto;
+		justify-self: center;
+		justify-content: center;
+	}
 }
