--- a/style.css
+++ b/style.css
@@ -38,9 +38,7 @@ h1, h2{
 	justify-content: center;
 	align-content: center;
 }
-h1{
-	background-color: rgb(197, 195, 192);
-}
+
 
 @media screen 
   and (min-device-width: 1200px) 
@@ -73,9 +71,12 @@ label {
 }
 
 header {
-	background-color: rgb(219, 217, 219);
+	background-color: rgb(116, 197, 211);
 	margin: -1rem -1rem 1rem;
 	display: grid;
 	text-align: left;
 	padding: 1rem;
+}
+h1{
+	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
