--- a/app.css
+++ b/app.css
@@ -6,6 +6,8 @@ body {
 	font-family: sans-serif;
 	background-color:rgb(233, 222, 222);
 	width: 100%;
+	height: 100%;
+
 }
 /* main {
 	display: grid;
@@ -30,7 +32,9 @@ header {
 	color: rgb(66, 64, 59);
 	/* background-color: rgb(182, 206, 206); */
 		background-color: rgb(122, 187, 187);
-	
+	color: rgb(80, 79, 69);
+	width: 100%;
+	height: 100%;
 }
 
 button {
@@ -46,6 +50,22 @@ button {
 	justify-content: left;
 	font-size: 24px;
 	width: 200px;  
+	
+}
+#fullReset{
+	padding: 0.75rem 1rem;
+	font-size: 100%;
+	border: 0;
+	border-radius: 0.25rem;
+	background-color: rgb(78, 136, 133); 
+	/* background-color: rgb(160, 131, 114); */
+	color: white;
+	justify-self: center;
+	display: grid;
+	justify-content: center;
+	font-size: 24px;
+	width: 200px; 
+	margin: 10px;
 	
 }
 #time {
@@ -79,14 +99,14 @@ label{
 	font-size: 30px;
 	font-style: normal;
 	font-family: 'Cabin', sans-serif; 
-    border: 2px solid rgb(194, 137, 122);
+    border: 2px solid rgb(226, 120, 93);
     padding: 20px;
-    width: 200px;
-    height: 150px;
+    /* max-width: 100%;
+    height: auto; */
     justify-content: center;
     align-content: center;
-    width: 50%;
-    height:80%;
+     width: 50%;
+    height:90%; 
     align-self: center;
    /* background-color: rgb(212, 123, 87); */
 background-color: rgb(214, 136, 136);;
@@ -105,29 +125,30 @@ span{
     font-size: 50px;
 	display: flex;
 	color: rgb(228, 191, 191);
+	max-width: 100%;
 }
 #option1, #option2, #option3, #option4 {
 	color:white;
 	font-size: 30px;
+	max-width: 100%;
 	font-family:  Arial, Helvetica, sans-serif;
 }
 #result{
-width: 100px;
-font-size: 20px;
+width: 120px;
+font-size: 24px;
 display: flex;
 justify-content: center;
 align-content: center;
 font-family: Arial, Helvetica, sans-serif;
 color: rgb(12, 12, 11);
-background-color: rgb(190, 209, 207);
-height: 40px;
+background-color: rgb(216, 137, 137);
+height: 60px;
 color: blue;
-/* border: 2px solid rgb(148, 134, 134); */
 position: absolute;
 top: 130px;
 right: 60px;
 bottom: 20px;
-border: 2px solid rgb(127, 146, 99);
+border: 2px solid rgb(47, 94, 105);
 }
 a{
 justify-content: right;
@@ -137,37 +158,29 @@ span{
 	font-family: sans-serif;
 	font-size: 24px;
 	color: rgb(32, 23, 23);
+	font-size:10vw;
+}
+#message{
+
+    display: flex;
+	font-size: 30px;
+	font-style: normal;
+	font-family: 'Cabin', sans-serif; 
+    padding: 20px;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-content: center;
+    /* width: 50%;
+    height:80%; */
+    align-self: center;
+   /* background-color: rgb(212, 123, 87); */
+   justify-self: center;
 }
 footer{
 	/* background-color: rgb(99, 184, 184); */
 	background-color: rgb(122, 187, 187);
+	width: 100%;
+	height: 100%;
 
-}
-@media only screen and (max-width: 768px) {
-	#question-display {
-		width: 100%;
-		padding: 10px;
-		margin: 150px auto;
-	}
-	header {
-		height: 350px;
-		width: 650px;
-	}
-}
-
-@media only screen and (max-width: 375px) {
-	#question{
-		width: 350px;
-		height: 550px;
-		padding: 10px;
-		margin: 150px auto;
-	}
-	header{
-		height: 350px;
-		width: 350px;
-		padding: 10px;
-		margin: 150px auto;
-		justify-self: center;
-		justify-content: center;
-	}
 }
