--- a/style.css
+++ b/style.css
@@ -9,20 +9,22 @@ body {
 	padding: 1rem;
 	min-height: 100vh;
 	font-family: sans-serif;
-	background-color: #e3e3e3;
+	background-color: #f7ecec;
 	width: 100%;
 }
 p{
 	display: grid;
-	font-size: 22px;
+	font-size: 23px;
 	justify-content: center;
 	align-content: center;
+	font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 a{
 	display: grid;
-	font-size: 24px;
+	font-size: 26px;
 	justify-content: center;
 	align-content: center;
+	
 
 }
  
@@ -31,52 +33,21 @@ h1, h2{
     font-size: 1.5em;
     margin-block-start: 0.83em;
     margin-block-end: 0.83em; 
-	font-weight: bold;
 	font-family: Arial, Helvetica, sans-serif;
-	font-weight: bold;
-	font-size: 28px;
+	font-size: 32px;
 	justify-content: center;
 	align-content: center;
+	color: rgb(80, 79, 69);
 }
-
-
-@media screen 
-  and (min-device-width: 1200px) 
-  and (max-device-width: 1600px) 
-  and (-webkit-min-device-pixel-ratio: 1) { 
-}
-@media 
-  (min-device-width: 800px) 
-  and (max-device-width: 1280px) {
-
-}
-body {
-	display: grid;
-	margin: 0;
-	padding: 1rem;
-	min-height: 100vh;
-	font-family: sans-serif;
-	background-color:whitesmoke;
+header{
+	background-color: indianred;
 	width: 100%;
-}
-label {
-	display: grid;
-	grid-template-rows: repeat(6, 1fr);
-	height: 100vh;
-	align-items: center;
-	text-align: center;
-	font-size: 20px;
-	width: 600px;
-    
-}
-
-header {
-	background-color: rgb(116, 197, 211);
-	margin: -1rem -1rem 1rem;
-	display: grid;
-	text-align: left;
-	padding: 1rem;
+	height: 100px;
+	
 }
 h1{
-	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+	font-size: 35px;
+	font-family: Arial, Helvetica, sans-serif;
+	color: ivory;
+	padding: 30PX;
 }
