--- a/app.css
+++ b/app.css
@@ -4,7 +4,6 @@ body {
 	padding: 1rem;
 	min-height: 100vh;
 	font-family: sans-serif;
-	background-color:rgb(233, 222, 222);
 	width: 100%;
 	height: 100%;
 
@@ -24,14 +23,14 @@ header {
 		/* background-color: rgba(0, 0, 0, 0.4); */
 		/* background-color: rgba(0, 0, 0, 0.4); */
 	/* background-color: #db5461; */
-	margin: -1rem -1rem 1rem;
+	margin-top: 100px;
 	display: grid;
 	text-align: left;
 	padding: 1rem;
 	font-style: normal;
 	color: rgb(66, 64, 59);
 	/* background-color: rgb(182, 206, 206); */
-		background-color: rgb(122, 187, 187);
+		/* background-color: rgb(122, 187, 187); */
 	color: rgb(80, 79, 69);
 	width: 100%;
 	height: 100%;
@@ -57,7 +56,7 @@ button {
 	font-size: 100%;
 	border: 0;
 	border-radius: 0.25rem;
-	background-color: rgb(78, 136, 133); 
+	/* background-color: rgb(78, 136, 133);  */
 	/* background-color: rgb(160, 131, 114); */
 	color: white;
 	justify-self: center;
@@ -76,10 +75,10 @@ button {
 	60px;
 }
 
-label:hover {
+label {
 	color: lightseagreen;
 	cursor: pointer;
-	padding: 1rem 0;
+	/* padding: 1rem 0; */
 	font-size: 24px;
 }
 h4 {
@@ -99,7 +98,7 @@ label{
 	font-size: 30px;
 	font-style: normal;
 	font-family: 'Cabin', sans-serif; 
-    border: 2px solid rgb(226, 120, 93);
+    /* border: 2px solid rgb(226, 120, 93); */
     padding: 20px;
     /* max-width: 100%;
     height: auto; */
@@ -109,7 +108,7 @@ label{
     height:90%; 
     align-self: center;
    /* background-color: rgb(212, 123, 87); */
-background-color: rgb(214, 136, 136);;
+background-color: rgb(233, 194, 194);
    justify-self: center;
 }
 
