--- a/app.css
+++ b/app.css
@@ -1,4 +1,4 @@
-body {
+/* body {
 	display: grid;
 	margin: 0;
 	padding: 1rem;
@@ -7,7 +7,7 @@ body {
 	width: 100%;
 	height: 100%;
 
-}
+} */
 /* main {
 	display: grid;
 	grid-template-rows: repeat(6, 1fr);
