--- a/app.css
+++ b/app.css
@@ -1,14 +1,21 @@
-/* body {
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+body {
 	display: grid;
 	margin: 0;
 	padding: 1rem;
 	min-height: 100vh;
 	font-family: sans-serif;
+	background-color:whitesmoke;
 	width: 100%;
-	height: 100%;
-
-} */
-/* main {
+	font-family: 'Lato', sans-serif;
+	font-size: 1.2rem;
+}
+main {
 	display: grid;
 	grid-template-rows: repeat(6, 1fr);
 	height: 60vh;
@@ -16,24 +23,17 @@
 	text-align: center;
     font-size: 20px;
     
-} */
+}
 
 header {
-	/* background-color: rgb(219, 217, 219); */
-		/* background-color: rgba(0, 0, 0, 0.4); */
-		/* background-color: rgba(0, 0, 0, 0.4); */
-	/* background-color: #db5461; */
-	margin-top: 100px;
+	background-color: rgb(219, 217, 219);
 	display: grid;
 	text-align: left;
 	padding: 1rem;
 	font-style: normal;
-	color: rgb(66, 64, 59);
-	/* background-color: rgb(182, 206, 206); */
-		/* background-color: rgb(122, 187, 187); */
-	color: rgb(80, 79, 69);
-	width: 100%;
-	height: 100%;
+	color: rgb(58, 54, 47);
+	margin-top: 18rem;
+	
 }
 
 button {
@@ -41,31 +41,11 @@ button {
 	font-size: 100%;
 	border: 0;
 	border-radius: 0.25rem;
-	/* background-color: lightseagreen;  */
-	background-color: rgb(230, 164, 123);
+	background-color: lightseagreen;
 	color: white;
 	justify-self: center;
 	display: grid;
 	justify-content: left;
-	font-size: 24px;
-	width: 200px;  
-	
-}
-#fullReset{
-	padding: 0.75rem 1rem;
-	font-size: 100%;
-	border: 0;
-	border-radius: 0.25rem;
-	/* background-color: rgb(78, 136, 133);  */
-	/* background-color: rgb(160, 131, 114); */
-	color: white;
-	justify-self: center;
-	display: grid;
-	justify-content: center;
-	font-size: 24px;
-	width: 200px; 
-	margin: 10px;
-	
 }
 #time {
 	color: lightcoral;
@@ -75,12 +55,6 @@ button {
 	60px;
 }
 
-label {
-	color: lightseagreen;
-	cursor: pointer;
-	/* padding: 1rem 0; */
-	font-size: 24px;
-}
 h4 {
     display: grid;
     font-size: 1.5em;
@@ -89,76 +63,81 @@ h4 {
 	font-weight: bold;
 	font-family: Arial, Helvetica, sans-serif;
 	font-weight: bold;
-	font-size: 30px;
+	font-size: 24px;
 	justify-content: left;
-	justify-content: center;
 }
 label{
     display: flex;
-	font-size: 30px;
+	font-size: 20px;
 	font-style: normal;
-	font-family: 'Cabin', sans-serif; 
-    /* border: 2px solid rgb(226, 120, 93); */
+	font-family: 'Courier New', Courier, monospace;
+	border-radius: 25px;
     padding: 20px;
-    /* max-width: 100%;
-    height: auto; */
+    width: 600px;
+    height: 150px;
     justify-content: center;
     align-content: center;
-     width: 50%;
-    height:90%; 
+    height:80%;
     align-self: center;
-   /* background-color: rgb(212, 123, 87); */
-background-color: rgb(233, 194, 194);
-   justify-self: center;
+   background-color: rgb(134, 198, 214);
+   padding: 20px;
+   margin: 20px;
 }
 
 #next {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 0px;
-;
+margin-top: 20rem;
+width: 900rem;
+padding-top: 900rem;
+margin-top: 600rem;
+font-size: 3rem;
 }
 span{
     color: black;
-    font-size: 50px;
-	display: flex;
-	color: rgb(228, 191, 191);
-	max-width: 100%;
-}
-#option1, #option2, #option3, #option4 {
-	color:white;
-	font-size: 30px;
-	max-width: 100%;
-	font-family:  Arial, Helvetica, sans-serif;
+    font-size: 24px;
+    display: flex;
 }
 #result{
-width: 120px;
-font-size: 24px;
+width: 100px;
+font-size: 10rem;
 display: flex;
 justify-content: center;
 align-content: center;
 font-family: Arial, Helvetica, sans-serif;
 color: rgb(12, 12, 11);
-background-color: rgb(216, 137, 137);
-height: 60px;
+background-color: rgb(190, 209, 207);
+height: 40px;
 color: blue;
+border: 2px solid rgb(148, 134, 134);
 position: absolute;
 top: 130px;
 right: 60px;
 bottom: 20px;
-border: 2px solid rgb(47, 94, 105);
+border: 2px solid rgb(127, 146, 99);
 }
 a{
 justify-content: right;
 float:right;
+font-size: 18px;;
 }
 span{
 	font-family: sans-serif;
 	font-size: 24px;
 	color: rgb(32, 23, 23);
-	font-size:10vw;
 }
+
+.home{
+	margin-left: 28rem;
+	margin-bottom: 25rem;
+	background-color: lightseagreen;
+}
+
+input{
+	background-color: rgb(34, 24, 24);
+}
+
 #message{
 
     display: flex;
@@ -175,11 +154,4 @@ span{
     align-self: center;
    /* background-color: rgb(212, 123, 87); */
    justify-self: center;
-}
-footer{
-	/* background-color: rgb(99, 184, 184); */
-	background-color: rgb(122, 187, 187);
-	width: 100%;
-	height: 100%;
-
 }
