--- a/app.css
+++ b/app.css
@@ -26,26 +26,28 @@ main {
 }
 
 header {
-	background-color: rgb(219, 217, 219);
 	display: grid;
 	text-align: left;
 	padding: 1rem;
 	font-style: normal;
 	color: rgb(58, 54, 47);
 	margin-top: 18rem;
+	width: 80rem;
 	
 }
 
 button {
 	padding: 0.75rem 1rem;
-	font-size: 100%;
+	font-size: 22px;
 	border: 0;
 	border-radius: 0.25rem;
 	background-color: lightseagreen;
 	color: white;
 	justify-self: center;
+	align-items: center;
 	display: grid;
 	justify-content: left;
+	width: 5.4rem;
 }
 #time {
 	color: lightcoral;
@@ -60,44 +62,49 @@ h4 {
     font-size: 1.5em;
     margin-block-start: 0.83rem; 
     margin-block-end: 0.83rem; 
-	font-weight: bold;
-	font-family: Arial, Helvetica, sans-serif;
-	font-weight: bold;
-	font-size: 24px;
+	font-weight: 530;
+	/* font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; */
+	font-family: Verdana, Geneva, Tahoma, sans-serif;
+	font-size: 28px;
 	justify-content: left;
+	/* background-color: #ffa5b0; */
+	height: 44px;
+	/* padding-top: 10px; */
+	color: #393e46;
 }
 label{
     display: flex;
 	font-size: 20px;
 	font-style: normal;
-	font-family: 'Courier New', Courier, monospace;
+	font-family: Verdana, Geneva, Tahoma, sans-serif;
 	border-radius: 25px;
-    padding: 20px;
+    padding: 10px;
     width: 600px;
-    height: 150px;
+    /* height: 150px; */
     justify-content: center;
     align-content: center;
-    height:80%;
+    /* height:80%; */
     align-self: center;
-   background-color: rgb(134, 198, 214);
-   padding: 20px;
+   /* background-color: #ffa5b0; */
+   background-color: f0ffff;
    margin: 20px;
+   color: #000;
 }
 
 #next {
   display: flex;
   justify-content: center;
   align-items: center;
-margin-top: 20rem;
-width: 900rem;
-padding-top: 900rem;
-margin-top: 600rem;
-font-size: 3rem;
+  margin-top: 20rem;
+  font-size: 3rem;
 }
 span{
     color: black;
-    font-size: 24px;
-    display: flex;
+    font-size: 22px;
+	display: flex;
+	font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+	width: 14.8rem;
+	color: white;
 }
 #result{
 width: 100px;
@@ -115,35 +122,29 @@ position: absolute;
 top: 130px;
 right: 60px;
 bottom: 20px;
-border: 2px solid rgb(127, 146, 99);
 }
 a{
 justify-content: right;
 float:right;
-font-size: 18px;;
+font-size: 18px;
+background-color: lightseagreen;
 }
 span{
 	font-family: sans-serif;
 	font-size: 24px;
-	color: rgb(32, 23, 23);
+	color: rgb(36, 33, 33);
 }
 
 .home{
-	margin-left: 28rem;
+	margin-left: 37rem;
 	margin-bottom: 25rem;
-	background-color: lightseagreen;
-}
-
-input{
-	background-color: rgb(34, 24, 24);
 }
 
 #message{
-
     display: flex;
-	font-size: 30px;
+	font-size: 24px;
 	font-style: normal;
-	font-family: 'Cabin', sans-serif; 
+	font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     padding: 20px;
     width: 100%;
     height: 100%;
@@ -154,4 +155,19 @@ input{
     align-self: center;
    /* background-color: rgb(212, 123, 87); */
    justify-self: center;
+   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+input:default {
+  box-shadow: 0 0 2px 1px coral;
+}
+
+input:default + label {
+  color: coral;
+}
+
+#option1, #option2, #option3, #option4{
+	color: #393e46;
+	font-weight: 540;
+	font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+	font-size: 28px;
 }
